# obs-linuxbrowser

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindCEF.cmake  FindOBS.cmake
data/locale/: de-DE.ini  en-US.ini
src/: config.h.in  shared.h
src/browser/: base64.cpp  base64.hpp  browser-app.cpp  browser-app.hpp  browser-client.cpp  browser-client.hpp  browser-subprocess.cpp  browser.cpp  split-message.cpp  split-message.hpp
src/plugin/: WindowsKeyboardCodes.h  main.c  manager.c  manager.h  windows_keycode.h
